# Capstone

./: .gitignore
blog/: package.json
blog/app/: package.json
blog/app/src/: App.jsx  idl copy.json  idl.json
blog/app/src.old/: idl.json  package.json
blog/app/src.old/context/: Blog.jsx
blog/app/src.old/pages/: dashboard.jsx  fullpost copy 2.jsx  fullpost copy.jsx
blog/app/src/components/: SessionProvider.jsx
blog/app/src/context/: Blog Copy.jsx  Blog copy 10.jsx  Blog copy 2.jsx  Blog copy 3.jsx  Blog copy 4.jsx  Blog copy 5.jsx  Blog copy 6.jsx  Blog copy 7.jsx  Blog copy 8.jsx  Blog copy 9.jsx  Blog.jsx
blog/app/src/functions/: getAvatarUrl.js
blog/app/src/pages/: FullPost.css  dashboard copy 2.jsx  dashboard copy 3.jsx  dashboard copy 4.jsx  dashboard copy 5.jsx  dashboard copy.jsx  dashboard.jsx  fullpost.jsx  fullpost.jsx.copy
blog/contract/blog/: Anchor.toml  package-lock.json
blog/contract/blog/programs/blog/: Cargo.toml
blog/contract/blog/programs/blog/src/: lib.rs
blog/smart-contract-solution/: lib.rs
